# hippo

./: README.md
py/: pyproject.toml
py/hippo/: __init__.py  identity.py  rsa.py
ts/: .gitignore  Makefile  README.md  package.json  rollup.config.mjs  tsconfig.json
ts/src/: hippo.ts  identity.ts  pem.ts  rsa.ts  strutils.ts
