[tool.poetry]
name = "hippo"
version = "0.1.0"
description = "Simple cryptography wrappers."
authors = ["tjkopena <tjkopena@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.4"
dataclasses-json = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
